--- a/branches/teamA_project/src/main/webapp/resources/css/loginstyle.css
+++ b/branches/teamA_project/src/main/webapp/resources/css/loginstyle.css
@@ -30,7 +30,7 @@ img{max-width:100%;}
 /****-----start-body----****/
 body{
 text-align: center;
-background: url("../loginimages/1.jpg") 0px 0px no-repeat;
+background: url("../img/1.jpg") 0px 0px no-repeat;
 background-size:cover;
 background-attachment: fixed;
 }
