--- a/branches/teamA_project/src/main/webapp/resources/css/zoomslider.css
+++ b/branches/teamA_project/src/main/webapp/resources/css/zoomslider.css
@@ -50,7 +50,7 @@
 		}
 
 	.banner-inner {
-    background: url(../img/1.jpg) no-repeat 0px 0px;
+    background: url(../img/patch_beaks.gif) no-repeat 0px 0px;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
