#김길재 creators, login, member_info, upload.jsp 추가 style-admin.css 내용 추가 변경사항 주석 표시 admin login이미지 추가

--- a/branches/teamA_project/src/main/webapp/resources/css/loginstyle-admin.css
+++ b/branches/teamA_project/src/main/webapp/resources/css/loginstyle-admin.css
@@ -30,7 +30,7 @@ img{max-width:100%;}
 /****-----start-body----****/
 body{
 text-align: center;
-background: url("../loginimg/admin/1.jpg") 0px 0px no-repeat;
+background: url("/resources/img/login.jpg") 0px 0px no-repeat;
 background-size:cover;
 background-attachment: fixed;
 }
