--- a/branches/teamA_project/src/main/webapp/resources/css/style-admin.css
+++ b/branches/teamA_project/src/main/webapp/resources/css/style-admin.css
@@ -1175,6 +1175,42 @@ a.btn.more {
 	font-size: 15px;
 }
 
+/* 회원상세정보 테이블 부분 추가  10-23 김길재*/
+.info th,
+.info td {
+	padding: 0.74rem;
+	vertical-align: top;
+	border-top: 1px solid #dee2e6;
+	font-size: 13px;
+	text-align: center;
+	border: 1px solid;
+}
+
+.info th {
+	color: #252525;
+	font-size: 15px;
+	text-align: center;
+	width: 50%;
+}
+
+/* 업로드 부분 추가 10-23김길재 */
+.upload th,
+.upload td {
+	padding: 0.74rem;
+	vertical-align: top;
+	border-top: 1px solid #dee2e6;
+	font-size: 13px;
+	text-align: center;
+	border: 1px solid;
+}
+
+.upload th {
+	color: #252525;
+	font-size: 15px;
+	text-align: center;
+	width: 40%;
+}
+
 .table-responsive {
 	display: block;
 	width: 100%;
