--- a/branches/teamA_project/src/main/webapp/resources/css/style4-mp.css
+++ b/branches/teamA_project/src/main/webapp/resources/css/style4-mp.css
@@ -210,7 +210,7 @@ a[aria-expanded="true"]::before {
     content: "\f015";
 }*/
 
-ul ul a {
+#sidebar ul ul a {
     font-size: 20px !important;
     padding-left: 30px !important;
     background: #41c123;
